Fix shadow bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -162,5 +162,11 @@
   color: rgb(194, 139, 0);
   text-align: center;
   -webkit-text-stroke: .1px hsl(0, 0%, 20%);
-  text-shadow: 1px 1px 3px rgb(240, 238, 220);
+  text-shadow: 0px 0px 3px rgb(240, 238, 220);
+}
+
+@media (max-width: 600px) {
+  .score {
+    text-shadow: none;
+  }
 }
